# CnC_Renegade

./: .gitignore  CMakeLists.txt  vcpkg.json
Code/: CMakeLists.txt  commando.sln
Code/BandTest/: BandTest.cpp  BandTest.rc  BandTest.vcproj  BandTest.vcxproj  BandTest.vcxproj.filters  CMakeLists.txt
Code/BinkMovie/: BINKMovie.cpp  BinkMovie.vcproj  BinkMovie.vcxproj  BinkMovie.vcxproj.filters  CMakeLists.txt
Code/Combat/: CMakeLists.txt  Combat.vcproj  Combat.vcxproj  Combat.vcxproj.filters  WeatherMgr.cpp  WeatherMgr.h  activeconversation.cpp  activeconversation.h  assetdep.cpp  beacongameobj.cpp  building.cpp  building.h  conversation.cpp  conversationmgr.cpp  cover.cpp  damage.cpp  directinput.cpp  ffactorylist.cpp  hud.cpp  mapmgr.cpp  mendozabossgameobj.cpp  pathaction.cpp  persistentgameobjobserver.cpp  radar.cpp  savegame.cpp  scriptablegameobj.cpp  scriptcommands.h  soldier.cpp  spawn.cpp  statemachine.h  staticnetworkobject.cpp  textwindow.cpp  transitiongameobj.cpp  vehicle.cpp  viseme.cpp  weaponbag.cpp
Code/Commando/: CDKeyAuth.cpp  CMakeLists.txt  DlgMPTeamSelect.cpp  FirewallWait.cpp  GameResSend.cpp  GameSpyBanList.cpp  GameSpy_QnR.cpp  GameSpy_QnR.h  NAT.cpp  WINMAIN.CPP  WOLLoginProfile.cpp  WOLLogonMgr.cpp  WOLQuickMatch.cpp  bandwidth.h  bandwidthcheck.cpp  bandwidthcheck.h  chat.rc  combatgmode.cpp  commando.dsp  commando.vcproj  commando.vcxproj  commando.vcxproj.filters  console.cpp  consolefunction.cpp  dlgcncbattleinfo.cpp  dlgcontrolsaveload.cpp  dlgmplanhostoptions.cpp  dlgmpwolbuddies.cpp  dlgmpwolchat.cpp  dlgserversaveload.cpp  gamedata.cpp  gamedata.h  gamespyadmin.cpp  init.cpp  inputconfigmgr.cpp  natsock.cpp  natter.cpp  playermanager.cpp  systemsettings.cpp  systemsettings.h  (+2 more)
Code/DirectX/: CMakeLists.txt  d3d8.hpp  d3d8types.hpp
Code/DirectX/include/: d3dx8.h
Code/Miles6/include/: mss.h
Code/SControl/: CMakeLists.txt  SControl.vcproj  SControl.vcxproj  SControl.vcxproj.filters  servercontrol.cpp  servercontrolsocket.cpp
Code/Scripts/: CMakeLists.txt  Group.cpp  Mission00.cpp  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission10.cpp  Mission11.cpp  MissionDemo.cpp  MissionS04.cpp  MissionX0.cpp  Scripts.vcproj  Scripts.vcxproj  Scripts.vcxproj.filters  Test_Cinematic.cpp  Test_DAY.cpp  Test_DLS.cpp  Test_DME.cpp  Test_GTH.cpp  Test_PDS.cpp  Test_RAD.cpp  Test_RMV.cpp  Test_RMV_Toolkit.cpp  Toolkit.cpp  Toolkit_Broadcaster.cpp  Toolkit_Powerup.cpp  Toolkit_Sounds.cpp  Toolkit_Triggers.cpp  mission08.cpp  scriptcommands.h  unitcombat.cpp
Code/Tools/LevelEdit/: LevelEdit.vcproj  LevelEdit.vcxproj  LevelEdit.vcxproj.filters  heightfieldeditor.cpp
Code/Tools/WWConfig/: DriverVersionWarning.cpp  PerformanceConfigDialog.cpp  WWConfig.vcproj  WWConfig.vcxproj  WWConfig.vcxproj.filters
Code/Tools/WWCtrl/: WWCtrl.vcproj  WWCtrl.vcxproj  WWCtrl.vcxproj.filters
Code/Tools/max2w3d/: max2w3d.vcproj  max2w3d.vcxproj  max2w3d.vcxproj.filters
Code/WWAudio/: AudioEvents.cpp  CMakeLists.txt  SoundScene.h  SoundSceneObj.cpp  WWAudio.cpp  WWAudio.h  WWAudio.vcproj  WWAudio.vcxproj  WWAudio.vcxproj.filters  soundstreamhandle.cpp
Code/WWMath/: CMakeLists.txt  aabox.h  cardinalspline.cpp  colmathaabox.cpp  colmathaabox.h  curve.cpp  hermitespline.cpp  matrix3d.cpp  tcbspline.cpp  wwmath.cpp  wwmath.h  wwmath.vcproj  wwmath.vcxproj  wwmath.vcxproj.filters
Code/WWOnline/: RefPtr.h  WOLChatObserver.cpp  WOLConnect.cpp  WOLNetUtilObserver.cpp  WOLSession.cpp
Code/ww3d2/: CMakeLists.txt  animatedsoundmgr.cpp  assetmgr.cpp  collect.cpp  coltest.h  dazzle.cpp  ddsfile.cpp  dx8caps.cpp  dx8caps.h  dx8fvf.cpp  dx8fvf.h  dx8indexbuffer.h  dx8renderer.cpp  dx8vertexbuffer.cpp  dx8wrapper.cpp  dx8wrapper.h  dynamesh.cpp  formconv.h  hanim.cpp  hlod.cpp  hmorphanim.cpp  htree.cpp  lightenvironment.cpp  mesh.cpp  meshgeometry.cpp  meshgeometry.h  meshmdl.cpp  meshmdlio.cpp  missingtexture.cpp  prim_anim.h  rddesc.h  rendobj.cpp  scene.cpp  shader.cpp  sortingrenderer.cpp  surfaceclass.cpp  surfaceclass.h  texture.cpp  textureloader.cpp  txt.cpp  (+7 more)
Code/wwbitpack/: BitPacker.cpp  CMakeLists.txt  bitstream.h  wwbitpack.vcproj  wwbitpack.vcxproj
Code/wwdebug/: CMakeLists.txt  wwdebug.vcproj  wwdebug.vcxproj  wwdebug.vcxproj.filters
Code/wwlib/: CMakeLists.txt  Except.cpp  FastAllocator.h  always.h  binheap.h  cpudetect.cpp  gnu_regex.c  gnu_regex.h  index.h  ini.cpp  keyboard.cpp  mempool.h  mixfile.cpp  mpu.cpp  msgloop.cpp  mutex.h  registry.cpp  sha.cpp  slnode.h  vector.h  visualc.h  win.h  wwlib.dsp  wwlib.vcproj  wwlib.vcxproj  wwlib.vcxproj.filters  wwstring.h
Code/wwnet/: CMakeLists.txt  connect.cpp  networkobjectmgr.cpp  packetmgr.cpp  wwnet.vcproj  wwnet.vcxproj
Code/wwphys/: CMakeLists.txt  Path.cpp  Pathfind.cpp  PathfindSector.cpp  camerashakesystem.h  pathmgr.cpp  pscene_projectors.cpp  visoptimizationcontext.cpp  wwphys.vcproj  wwphys.vcxproj  wwphys.vcxproj.filters
Code/wwsaveload/: CMakeLists.txt  wwsaveload.vcproj  wwsaveload.vcxproj  wwsaveload.vcxproj.filters
Code/wwtranslatedb/: CMakeLists.txt  translatedb.cpp  wwtranslatedb.vcproj  wwtranslatedb.vcxproj  wwtranslatedb.vcxproj.filters
Code/wwui/: CMakeLists.txt  IMEManager.cpp  dialogbase.cpp  dialogmgr.cpp  dropdownctrl.cpp  editctrl.cpp  imagectrl.cpp  listctrl.cpp  listiconmgr.cpp  mapctrl.cpp  menudialog.cpp  shortcutbarctrl.cpp  stylemgr.cpp  tabctrl.cpp  treectrl.cpp  treectrl.h  wwui.vcproj  wwui.vcxproj  wwui.vcxproj.filters
Code/wwutil/: CMakeLists.txt  wwutil.vcproj  wwutil.vcxproj
cmake/: FindMiles.cmake
