add_subdirectory(wwdebug)
add_subdirectory(wwsaveload)
add_subdirectory(wwbitpack)
add_subdirectory(WWMath)
add_subdirectory(wwutil)
add_subdirectory(wwlib)
add_subdirectory(ww3d2)
add_subdirectory(wwtranslatedb)
add_subdirectory(WWAudio)
add_subdirectory(wwui)
add_subdirectory(wwnet)
add_subdirectory(wwphys)
add_subdirectory(SControl)
add_subdirectory(BinkMovie)
add_subdirectory(BandTest)
add_subdirectory(Scripts)
add_subdirectory(Combat)
add_subdirectory(Commando)
