add_executable(Renegade WIN32
    boolean.h
    combatgmode.cpp
    combatgmode.h
    commandochunkids.h
    commandoids.h
    commandosaveload.cpp
    commandosaveload.h
    comnetrcvinst.cpp
    comnetrcvinst.h
    gameinitmgr.cpp
    gameinitmgr.h
    god.cpp
    god.h
    inputconfig.cpp
    inputconfig.h
    inputconfigmgr.cpp
    inputconfigmgr.h
    lev_file.h
    level.cpp
    level.h
    nethandler.cpp
    nethandler.h
    player.cpp
    player.h
    playermanager.cpp
    playermanager.h
    regbool.cpp
    regbool.h
    regfloat.cpp
    regfloat.h
    regint.cpp
    regint.h
    regstring.cpp
    regstring.h
    renegadeplayerterminal.cpp
    renegadeplayerterminal.h
    systemsettings.cpp
    systemsettings.h
    team.cpp
    team.h
    teammanager.cpp
    teammanager.h
    # Begin Group "Modes"
    campaign.cpp
    campaign.h
    console.cpp
    console.h
    consolefunction.cpp
    consolefunction.h
    gamemenu.cpp
    gamemenu.h
    langmode.cpp
    langmode.h
    movie.cpp
    movie.h
    overlay.cpp
    overlay.h
    scorescreen.cpp
    scorescreen.h
    textdisplay.cpp
    textdisplay.h
    wolgmode.cpp
    wolgmode.h
    # End Group
    # Begin Group "Shell"
    _globals.h
    # afxres.h
    AutoStart.cpp
    AutoStart.h
    buildnum.cpp
    buildnum.h
    cdverify.cpp
    cdverify.h
    cominit.cpp
    cominit.h
    ConsoleMode.cpp
    ConsoleMode.h
    gamemode.cpp
    gamemode.h
    init.cpp
    init.h
    mainloop.cpp
    mainloop.h
    shutdown.cpp
    shutdown.h
    singletoninstancekeeper.cpp
    singletoninstancekeeper.h
    WINMAIN.CPP
    WINMAIN.H
    # End Group
    # Begin Group "Shortcuts"
    # ../../Run/_asserts.txt
    # ../../Run/_except.txt
    # ../../run/_logfile.txt
    # ../../../RenegadeMe/Doc/cncwishlist.txt
    # ../../../RenegadeMe/Doc/currentbugs.txt
    # ../../../RenegadeMe/Doc/joinprocess.txt
    # junkcode.txt
    # ../../../RenegadeMe/Doc/priorities.txt
    # ../../Run/results.txt
    # ../../../RenegadeMe/Doc/todo.txt
    # End Group
    # Begin Group "Wol"
    bandwidthcheck.cpp
    bandwidthcheck.h
    FirewallWait.cpp
    FirewallWait.h
    GameResSend.cpp
    GameResSend.h
    mpsettingsmgr.cpp
    mpsettingsmgr.h
    WOLBuddyMgr.cpp
    WOLBuddyMgr.h
    WOLChatMgr.cpp
    WOLChatMgr.h
    WOLDiags.cpp
    WOLDiags.h
    WOLGameInfo.cpp
    WOLGameInfo.h
    WOLJoinGame.cpp
    WOLJoinGame.h
    wollocalemgr.cpp
    wollocalemgr.h
    WOLLoginProfile.cpp
    WOLLoginProfile.h
    WOLLogonMgr.cpp
    WOLLogonMgr.h
    WOLQuickMatch.cpp
    WOLQuickMatch.h
    # End Group
    # Begin Group "Lan&Wol"
    chatshre.cpp
    chatshre.h
    gamechanlist.cpp
    gamechanlist.h
    gamechannel.cpp
    gamechannel.h
    gamesideservercontrol.cpp
    gamesideservercontrol.h
    netinterface.cpp
    netinterface.h
    ServerSettings.cpp
    ServerSettings.h
    slavemaster.cpp
    slavemaster.h
    # End Group
    # Begin Group "Network"
    apppacketstats.cpp
    apppacketstats.h
    bandwidth.cpp
    bandwidth.h
    bandwidthgraph.cpp
    bandwidthgraph.h
    clienthintmanager.cpp
    clienthintmanager.h
    clientpingmanager.cpp
    clientpingmanager.h
    cnetwork.cpp
    cnetwork.h
    comnetrcv.h
    datasafe.cpp
    datasafe.h
    demosupport.h
    devoptions.cpp
    devoptions.h
    diagnostics.cpp
    diagnostics.h
    messages.cpp
    multihud.cpp
    multihud.h
    NAT.cpp
    nataddr.cpp
    natsock.cpp
    natter.cpp
    netgraphs.cpp
    nicenum.cpp
    nicenum.h
    pkthandlers.cpp
    priority.cpp
    priority.h
    sbbomanager.cpp
    sbbomanager.h
    useroptions.cpp
    useroptions.h
    vendor.cpp
    vendor.h
    # End Group
    # Begin Group "Wolapi"
    ../wolapi/chatdefs.h
    ../wolapi/downloaddefs.h
    ../wolapi/ftpdefs.h
    ../wolapi/netutildefs.h
    ../wolapi/WOLAPI.h
    ../wolapi/WOLAPI_i.c
    # End Group
    # Begin Group "GameModes"
    gamedata.cpp
    gamedata.h
    gdcnc.cpp
    gdcnc.h
    gdsingleplayer.cpp
    gdsingleplayer.h
    gdskirmish.cpp
    gdskirmish.h
    # End Group
    # Begin Group "Lan"
    lanchat.cpp
    lanchat.h
    # End Group
    # Begin Group "GUI"
    chat.rc
    dialogresource.h
    dialogtests.cpp
    dialogtests.h
    dlgcharacteroptions.cpp
    dlgcharacteroptions.h
    dlgcheatoptions.cpp
    dlgcheatoptions.h
    dlgcncbattleinfo.cpp
    dlgcncbattleinfo.h
    dlgcncpurchasemainmenu.cpp
    dlgcncpurchasemainmenu.h
    dlgcncpurchasemenu.cpp
    dlgcncpurchasemenu.h
    dlgcncreference.cpp
    dlgcncreference.h
    dlgcncserverinfo.cpp
    dlgcncserverinfo.h
    dlgcncteaminfo.cpp
    dlgcncteaminfo.h
    dlgcncwinscreen.cpp
    dlgcncwinscreen.h
    dlgconfigaudiotab.cpp
    dlgconfigaudiotab.h
    dlgconfigperformancetab.cpp
    dlgconfigperformancetab.h
    dlgconfigvideotab.cpp
    dlgconfigvideotab.h
    dlgcontrols.cpp
    dlgcontrols.h
    dlgcontrolsaveload.cpp
    dlgcontrolsaveload.h
    dlgcontrolslisttab.cpp
    dlgcontrolslisttab.h
    dlgcontroltabs.cpp
    dlgcontroltabs.h
    dlgcredits.cpp
    dlgcredits.h
    DlgDownload.cpp
    DlgDownload.h
    dlgevabuildingstab.cpp
    dlgevabuildingstab.h
    dlgevacharacterstab.cpp
    dlgevacharacterstab.h
    dlgevadatatab.cpp
    dlgevadatatab.h
    dlgevaencyclopedia.cpp
    dlgevaencyclopedia.h
    dlgevamaptab.cpp
    dlgevamaptab.h
    dlgevaobjectivestab.cpp
    dlgevaobjectivestab.h
    dlgevavehiclestab.cpp
    dlgevavehiclestab.h
    dlgevaviewertab.cpp
    dlgevaviewertab.h
    dlgevaweaponstab.cpp
    dlgevaweaponstab.h
    dlghelpscreen.cpp
    dlghelpscreen.h
    dlgloadspgame.cpp
    dlgloadspgame.h
    dlgmainmenu.cpp
    dlgmainmenu.h
    DlgMessageBox.cpp
    DlgMessageBox.h
    dlgmovieoptions.cpp
    dlgmovieoptions.h
    dlgmpchangelannickname.cpp
    dlgmpchangelannickname.h
    DlgMPConnect.cpp
    DlgMPConnect.h
    DlgMPConnectionRefused.cpp
    DlgMPConnectionRefused.h
    dlgmpingamechat.cpp
    dlgmpingamechat.h
    dlgmpingameteamchat.cpp
    dlgmpingameteamchat.h
    dlgmplangamelist.cpp
    dlgmplangamelist.h
    dlgmplanhostoptions.cpp
    dlgmplanhostoptions.h
    dlgmpslaveservers.cpp
    DlgMPTeamSelect.cpp
    DlgMPTeamSelect.h
    dlgmpwoladdbuddy.cpp
    dlgmpwoladdbuddy.h
    dlgmpwoladdignoreentry.cpp
    dlgmpwoladdignoreentry.h
    dlgmpwolautologinprompt.cpp
    dlgmpwolautologinprompt.h
    dlgmpwolbuddies.cpp
    dlgmpwolbuddies.h
    dlgmpwolbuddylistpopup.cpp
    dlgmpwolbuddylistpopup.h
    dlgmpwolchat.cpp
    dlgmpwolchat.h
    dlgmpwoldeletebuddy.cpp
    dlgmpwoldeletebuddy.h
    dlgmpwoldeleteignoreentry.cpp
    dlgmpwoldeleteignoreentry.h
    dlgmpwolgamelist.cpp
    dlgmpwolgamelist.h
    dlgmpwolgoodies.cpp
    dlgmpwolgoodies.h
    dlgmpwolignorelist.cpp
    dlgmpwolignorelist.h
    dlgmpwolinvitation.cpp
    dlgmpwolinvitation.h
    dlgmpwollocalenag.cpp
    dlgmpwollocalenag.h
    dlgmpwolmain.cpp
    dlgmpwolmain.h
    dlgmpwolmotd.cpp
    dlgmpwolmotd.h
    dlgmpwolpagebuddy.cpp
    dlgmpwolpagebuddy.h
    dlgmpwolpagereply.cpp
    dlgmpwolpagereply.h
    dlgmpwolquickmatchoptions.cpp
    dlgmpwolquickmatchoptions.h
    dlgmultiplayoptions.cpp
    dlgmultiplayoptions.h
    DlgPasswordPrompt.cpp
    DlgPasswordPrompt.h
    dlgpreviewoptions.cpp
    dlgpreviewoptions.h
    DlgQuickmatch.cpp
    DlgQuickmatch.h
    DlgRestart.cpp
    DlgRestart.h
    dlgsavegame.cpp
    dlgsavegame.h
    dlgserversaveload.cpp
    dlgserversaveload.h
    dlgsidebarhelp.cpp
    dlgsidebarhelp.h
    dlgtechoptions.cpp
    dlgtechoptions.h
    DlgWebPage.cpp
    DlgWebPage.h
    DlgWOLAutoStart.cpp
    DlgWOLAutoStart.h
    DlgWOLLogon.cpp
    DlgWOLLogon.h
    DlgWOLSettings.cpp
    DlgWOLSettings.h
    DlgWOLWait.cpp
    DlgWOLWait.h
    mainmenutransition.cpp
    mainmenutransition.h
    radiocommanddisplay.cpp
    radiocommanddisplay.h
    renegadedialogmgr.cpp
    renegadedialogmgr.h
    resource.h
    skinpackage.cpp
    skinpackage.h
    skinpackagemgr.cpp
    skinpackagemgr.h
    WebBrowser.cpp
    WebBrowser.h
    # End Group
    # Begin Group "NetEvents"
    AnnounceEvent.cpp
    AnnounceEvent.h
    bioevent.cpp
    bioevent.h
    changeteamevent.cpp
    changeteamevent.h
    clientbboevent.cpp
    clientbboevent.h
    clientgoodbyeevent.cpp
    clientgoodbyeevent.h
    consolecommandevent.cpp
    consolecommandevent.h
    csconsolecommandevent.cpp
    csconsolecommandevent.h
    cshint.cpp
    cshint.h
    cspingrequestevent.cpp
    cspingrequestevent.h
    cstextobj.cpp
    cstextobj.h
    donateevent.cpp
    donateevent.h
    evictionevent.cpp
    evictionevent.h
    gamedataupdateevent.cpp
    gamedataupdateevent.h
    gameoptionsevent.cpp
    gameoptionsevent.h
    gamespycschallengeresponseevent.cpp
    gamespycschallengeresponseevent.h
    gamespyscchallengeevent.cpp
    gamespyscchallengeevent.h
    godmodeevent.cpp
    godmodeevent.h
    loadingevent.cpp
    loadingevent.h
    moneyevent.cpp
    moneyevent.h
    netevent.cpp
    netevent.h
    playerkill.cpp
    playerkill.h
    purchaserequestevent.cpp
    purchaserequestevent.h
    purchaseresponseevent.cpp
    purchaseresponseevent.h
    requestkillevent.cpp
    requestkillevent.h
    scoreevent.cpp
    scoreevent.h
    scpingresponseevent.cpp
    scpingresponseevent.h
    sctextobj.cpp
    sctextobj.h
    suicideevent.cpp
    suicideevent.h
    svrgoodbyeevent.cpp
    svrgoodbyeevent.h
    vipmodeevent.cpp
    vipmodeevent.h
    warpevent.cpp
    warpevent.h
    winevent.cpp
    winevent.h
    # End Group
    # Begin Group "WOLBrowser"
    ../WOLBrowser/WOLBrowser.h
    ../WOLBrowser/WOLBrowser_i.c
    # End Group
    # Begin Group "WWOnline"
    ../WWOnline/GameResField.cpp
    ../WWOnline/GameResField.h
    ../WWOnline/GameResPacket.cpp
    ../WWOnline/GameResPacket.h
    ../WWOnline/PingProfile.cpp
    ../WWOnline/PingProfile.h
    ../WWOnline/RefCounted.h
    ../WWOnline/RefPtr.h
    ../WWOnline/WaitCondition.cpp
    ../WWOnline/WaitCondition.h
    ../WWOnline/WOLAgeCheck.h
    ../WWOnline/WOLChannel.cpp
    ../WWOnline/WOLChannel.h
    ../WWOnline/WOLChatMsg.cpp
    ../WWOnline/WOLChatMsg.h
    ../WWOnline/WOLChatObserver.cpp
    ../WWOnline/WOLChatObserver.h
    ../WWOnline/WOLConnect.cpp
    ../WWOnline/WOLConnect.h
    ../WWOnline/WOLDownload.cpp
    ../WWOnline/WOLDownload.h
    ../WWOnline/WOLErrorUtil.cpp
    ../WWOnline/WOLErrorUtil.h
    ../WWOnline/WOLGame.cpp
    ../WWOnline/WOLGame.h
    ../WWOnline/WOLGameOptions.cpp
    ../WWOnline/WOLGameOptions.h
    ../WWOnline/WOLLadder.cpp
    ../WWOnline/WOLLadder.h
    ../WWOnline/WOLLangCodes.h
    ../WWOnline/WOLLoginInfo.cpp
    ../WWOnline/WOLLoginInfo.h
    ../WWOnline/WOLNetUtilObserver.cpp
    ../WWOnline/WOLNetUtilObserver.h
    ../WWOnline/WOLPageMsg.cpp
    ../WWOnline/WOLPageMsg.h
    ../WWOnline/WOLPing.h
    ../WWOnline/WOLProduct.cpp
    ../WWOnline/WOLProduct.h
    ../WWOnline/WOLServer.cpp
    ../WWOnline/WOLServer.h
    ../WWOnline/WOLSession.cpp
    ../WWOnline/WOLSession.h
    ../WWOnline/WOLSquad.cpp
    ../WWOnline/WOLSquad.h
    ../WWOnline/WOLString.cpp
    ../WWOnline/WOLString.h
    ../WWOnline/WOLUser.cpp
    ../WWOnline/WOLUser.h
    # End Group
    # Begin Group "NetObjects"
    clientfps.cpp
    clientfps.h
    serverfps.cpp
    serverfps.h
    # End Group
    # Begin Group "Unclaimed"
    renegadecheatmgr.cpp
    renegadecheatmgr.h
    # End Group
    # Begin Group "GameSpy"
    CDKeyAuth.cpp
    CDKeyAuth.h
    GameSpy_QnR.cpp
    GameSpy_QnR.h
    gamespyadmin.cpp
    gamespyadmin.h
    gamespyauthmgr.cpp
    gamespyauthmgr.h
    GameSpyBanList.cpp
    GameSpyBanList.h
    # End Group
    # Begin Source File
    floodprotectionmgr.cpp
    floodprotectionmgr.h
    modpackage.cpp
    modpackage.h
    modpackagemgr.cpp
    modpackagemgr.h
    Renegade.ico
)
target_include_directories(Renegade
    PRIVATE
        ../directx
        ../sr/h
        ../sr/devs.h
        ../sr/sr.h
        ../wwmath
        ../ww3d
        ../library
        ../glide
        ../DirectX/include
        ../
        ../wwui
        ../wwbitpack
        ../combat
        ../wwaudio
        ../miles6/include
        ../wolapi
        ../wwutil
        ../wwlzhl
        ../wwnet
        ../wwmath
        ../ww3d2
        ../wwphys
        ../wwlib
        ../wwdebug
        ../wwsaveload
        ../wwtranslatedb
        ../BinkMovie
        ../scontrol
        ../GameSpy
)
target_compile_definitions(Renegade PRIVATE OBSIDIAN DIRECTX _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_DEPRECATE)
target_link_directories(Renegade PRIVATE ../DirectX/lib)
target_link_libraries(Renegade PRIVATE winmm version ws2_32 wwlib Combat wwbitpack wwphys ww3d2 WWAudio wwnet wwui BinkMovie BandTest SControl dxguid d3dx8 dinput dinput8 ddraw)
target_link_options(Renegade PRIVATE /NODEFAULTLIB:libci)
