add_library(wwlib STATIC
    _convert.cpp
    _convert.h
    _mono.cpp
    _mono.h
    _timer.cpp
    _timer.h
    _xmouse.h
    always.h
    argv.cpp
    argv.h
    b64pipe.cpp
    b64pipe.h
    b64straw.cpp
    b64straw.h
    base64.cpp
    base64.h
    binheap.h
    bittype.h
    blit.cpp
    blit.h
    blitblit.h
    blitter.h
    blowfish.cpp
    blowfish.h
    blowpipe.cpp
    blowpipe.h
    blwstraw.cpp
    blwstraw.h
    bool.h
    borlandc.h
    bound.h
    bsearch.h
    bsurface.h
    buff.cpp
    buff.h
    bufffile.cpp
    bufffile.h
    CallbackHook.h
    chunkio.cpp
    chunkio.h
    convert.cpp
    convert.h
    cpudetect.cpp
    cpudetect.h
    crc.cpp
    crc.h
    crcpipe.cpp
    crcpipe.h
    crcstraw.cpp
    crcstraw.h
    critsection.cpp
    critsection.h
    cstraw.cpp
    cstraw.h
    data.cpp
    data.h
    ddraw.cpp
    dib.cpp
    dib.h
    draw.cpp
    draw.h
    dspmake.cfg
    dsurface.cpp
    dsurface.h
    Except.cpp
    Except.h
    FastAllocator.cpp
    FastAllocator.h
    ffactory.cpp
    ffactory.h
    fixed.cpp
    fixed.h
    font.h
    gcd_lcm.cpp
    gcd_lcm.h
    global.h
    gnu_regex.c
    gnu_regex.h
    hash.cpp
    hash.h
    hashcalc.h
    hashlist.h
    hashtab.h
    hashtemplate.h
    hsv.cpp
    hsv.h
    iff.h
    incdec.h
    index.h
    ini.cpp
    ini.h
    inisup.h
    int.cpp
    int.h
    iostruct.h
    jshell.cpp
    keyboard.cpp
    keyboard.h
    LaunchWeb.cpp
    LaunchWeb.h
    lcw.cpp
    lcw.h
    lcwpipe.cpp
    lcwpipe.h
    listnode.h
    load.cpp
    lzo.cpp
    lzo.h
    lzo_conf.h
    lzo1x.h
    lzo1x_c.cpp
    lzo1x_d.cpp
    lzoconf.h
    lzopipe.cpp
    lzopipe.h
    lzostraw.cpp
    lzostraw.h
    md5.cpp
    md5.h
    mempool.h
    misc.h
    mixfile.cpp
    mixfile.h
    mmsys.h
    mono.cpp
    mono.h
    monodrvr.h
    mpmath.cpp
    mpmath.h
    mpu.cpp
    mpu.h
    msgloop.cpp
    msgloop.h
    multilist.cpp
    multilist.h
    mutex.cpp
    mutex.h
    noinit.h
    Notify.h
    nstrdup.cpp
    nstrdup.h
    ntree.h
    obscure.cpp
    obscure.h
    palette.cpp
    palette.h
    pcx.cpp
    pcx.h
    pipe.cpp
    pipe.h
    pk.cpp
    pk.h
    pkpipe.cpp
    pkpipe.h
    pkstraw.cpp
    pkstraw.h
    point.cpp
    point.h
    ramfile.cpp
    ramfile.h
    random.cpp
    random.h
    rawfile.cpp
    rawfile.h
    rc4.cpp
    rc4.h
    rcfile.cpp
    rcfile.h
    readline.cpp
    readline.h
    realcrc.cpp
    realcrc.h
    ref_ptr.h
    refcount.cpp
    refcount.h
    regex.c
    regex.h
    regexpr.cpp
    regexpr.h
    registry.cpp
    registry.h
    rgb.cpp
    rgb.h
    rle.cpp
    rle.h
    rlerle.h
    rndstraw.cpp
    rndstraw.h
    rndstrng.cpp
    rndstrng.h
    rng.h
    rsacrypt.h
    sampler.cpp
    sampler.h
    search.h
    sha.cpp
    sha.h
    shapeset.h
    shapipe.cpp
    shapipe.h
    sharebuf.h
    shastraw.cpp
    shastraw.h
    Signaler.h
    simplevec.h
    slist.h
    slnode.cpp
    slnode.h
    smartptr.h
    srandom.cpp
    srandom.h
    stimer.cpp
    stimer.h
    stl.h
    straw.cpp
    straw.h
    strtok_r.cpp
    strtok_r.h
    surface.cpp
    surface.h
    surfrect.h
    swap.h
    systimer.cpp
    systimer.h
    tagblock.cpp
    tagblock.h
    TARGA.CPP
    TARGA.H
    textfile.cpp
    textfile.h
    thread.cpp
    thread.h
    timer.h
    trackwin.h
    trackxy.h
    trect.h
    trim.cpp
    trim.h
    uarray.h
    vector.cpp
    vector.h
    verchk.cpp
    verchk.h
    visualc.h
    watcom.h
    widestring.cpp
    widestring.h
    win.cpp
    win.h
    WWCOMUtil.cpp
    WWCOMUtil.h
    wwfile.cpp
    wwfile.h
    wwfont.cpp
    wwfont.h
    wwmouse.cpp
    wwmouse.h
    wwstring.cpp
    wwstring.h
    xmouse.h
    xpipe.cpp
    xpipe.h
    xstraw.cpp
    xstraw.h
    xsurface.cpp
    xsurface.h
)
target_include_directories(wwlib PRIVATE ../wwdebug PUBLIC .)
target_compile_definitions(wwlib PRIVATE WIN32_LEAN_AND_MEAN _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_WARNINGS STDC_HEADERS REL_ALLOC REGEX_MALLOC)
